--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,14 @@ button.secondary {
 button:hover {
   filter: brightness(0.9);
 }
+
+input:disabled {
+  cursor: not-allowed;
+  background-color: var(--grey);
+  border-color: var(--dark-grey);
+  color: var(--dark-grey);
+}
+
+*:has(input:disabled) > label {
+  filter: opacity(0.5);
+}
