--- a/src/pages/AssetForm.css
+++ b/src/pages/AssetForm.css
@@ -27,13 +27,12 @@
 #asset-form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
+  gap: 1rem;
   padding-inline: 2rem;
   padding-block: 1rem;
 }
 
 #asset-form .buttons {
-  margin-top: 1rem;
   grid-column: 1 / span 2;
   display: flex;
   justify-content: center;
@@ -57,4 +56,16 @@
   padding-block: 1rem;
   text-align: center;
   border-bottom: 1px solid var(--dark-grey);
+}
+
+#asset-form .info {
+  display: grid;
+  grid-column: 1 / span 2;
+  text-align: center;
+  vertical-align: middle;
+  height: 3rem;
+}
+
+#asset-form .info > * {
+  margin: 0;
 }
