--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,7 +1,7 @@
 table#asset-table {
   margin: auto;
   background-color: white;
-  padding: .8rem;
+  padding: 0.8rem;
   border: 1px solid var(--grey);
   padding-bottom: 0;
   border-radius: 0.4rem;
@@ -22,24 +22,15 @@ table#asset-table td {
   max-width: 14rem;
 }
 
+table#asset-table td:has(img) {
+  text-align: center;
+}
+
 table#asset-table tbody td {
   border-bottom: 1px solid var(--grey);
 }
 table#asset-table tbody td p {
   text-align: center;
-}
-
-table tr.asset img.logo {
-  margin-inline: 2rem;
-  max-height: 5rem;
-  aspect-ratio: 1/1;
-  object-fit: contain;
-  border-radius: 100%;
-}
-table tr.asset td {
-  align-items: center;
-  align-content: center;
-  align-self: center;
 }
 
 table#asset-table tfoot tr {
