--- a/src/pages/AssetForm.css
+++ b/src/pages/AssetForm.css
@@ -1,29 +1,3 @@
-.input-container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
-}
-.input-container label {
-  font-size: 1rem;
-  font-weight: 600;
-}
-.input-container input {
-  outline: none;
-  padding: 0.4rem;
-  border-radius: 0.2rem;
-  font-size: 1.2rem;
-  border: 1px solid black;
-}
-
-.input-container:has(.error) input {
-  border-color: red;
-}
-
-.input-container .error {
-  margin: 0;
-  color: red;
-}
-
 #asset-form {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -68,4 +42,22 @@
 
 #asset-form .info > * {
   margin: 0;
+}
+
+#asset-form .info > .error {
+  color: red;
+}
+
+a#assetForm {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  background-color: var(--yellow);
+  padding: 0.7rem 1.5rem;
+  border-radius: 0.2rem;
+
+  transition: filter 0.2s ease-in-out;
+}
+a#assetForm:hover {
+  filter: brightness(0.9);
 }
