--- a/src/components/Asset.css
+++ b/src/components/Asset.css
@@ -26,3 +26,48 @@
   background-color: red;
   color: white;
 }
+
+.asset.processing {
+  overflow: hidden;
+}
+
+.asset.processing::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+
+td:has(.spinner) {
+  position: relative;
+}
+
+.spinner {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 100%;
+  border: 5px solid var(--grey);
+  border-top: 5px solid var(--yellow);
+  animation: spinner 0.75s ease infinite;
+}
+
+td:has(.spinner)::before {
+  display: table;
+  content: "";
+  width: 100%;
+  height: calc(5rem + 6px);
+}
+
+@keyframes spinner {
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
